--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Ian Jennings",
   "license": "ISC",
   "dependencies": {
     "node-global-key-listener": "^0.1.1"
-  }
+  },
+  "bin": {
+    "dashcam-keys": "./bin/cli.js"
+  },
+  "preferGlobal": true
 }
